# visual-relocalization-colmap

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Dockerfile.rviz  README.md  build_and_test.sh  download_dataset.py  package.xml
.github/workflows/: build-and-test.yaml
apps/: relocalization.cc
config/: relocalization.yaml
include/visual_localization/: camera_parameter.h  conversion.h  cv_eigen.h  eigen_utils.h  pnp.h  projection.h  triangulation.h  vector_search.h
include/visual_localization/colmap/: bitmap.h  cv_colmap.h  feature.h
include/visual_localization/ros/: header_message.h  image_message.h  point32_message.h  point_message.h  pointcloud_message.h  pose_message.h  pose_stamped_message.h  quaternion_message.h
launch/: relocalization_launch.py
rviz/: relocalization.rviz
scripts/: build_dockerfile.sh  build_source.sh  launch_rviz.sh  make_ply.sh  run_localization.sh
src/: bitmap.cc  camera_parameter.cc  conversion.cc  cv_colmap.cc  cv_eigen.cc  eigen_utils.cc  feature.cc  pnp.cc  projection.cc  triangulation.cc  vector_search.cc
src/ros/: header_message.cc  image_message.cc  point32_message.cc  point_message.cc  pointcloud_message.cc  pose_message.cc  pose_stamped_message.cc  quaternion_message.cc
tests/: bitmap.cc  camera_parameter.cc  conversion.cc  cv_colmap.cc  cv_eigen.cc  eigen_utils.cc  feature.cc  pnp.cc  projection.cc  triangulation.cc  vector_search.cc
tests/ros/: header_message.cc  image_message.cc  point32_message.cc  point_message.cc  pointcloud_message.cc  pose_message.cc  pose_stamped_message.cc  quaternion_message.cc
